// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/bitbucket/comments ensureComment() add comment if not found 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
  },
  Object {
    "body": "{\\"content\\":{\\"raw\\":\\"### topic\\\\n\\\\ncontent\\"}}",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "content-length": "42",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments",
  },
]
`;

exports[`platform/bitbucket/comments ensureComment() add updates comment if necessary 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
  },
  Object {
    "body": "{\\"content\\":{\\"raw\\":\\"### some-subject\\\\n\\\\nsome\\\\ncontent\\"}}",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "content-length": "55",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments/5",
  },
]
`;

exports[`platform/bitbucket/comments ensureComment() does not throw 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/3/comments?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/comments ensureComment() skips comment 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/comments ensureCommentRemoval() deletes comment by content if found 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "DELETE",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments/5",
  },
]
`;

exports[`platform/bitbucket/comments ensureCommentRemoval() deletes comment by topic if found 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "DELETE",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments/5",
  },
]
`;

exports[`platform/bitbucket/comments ensureCommentRemoval() deletes nothing 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/comments ensureCommentRemoval() does not throw 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
  },
]
`;
